tweak fix for DT-2469, fix horizontal scroll on mobile

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -14,7 +14,7 @@
         }
         @media @tablet {
             width: auto;
-            margin: 15px 0 0;
+            margin: 15px 30px 0;
         }
     }
 }
